# Voxel-Veiwer

./: CMakeLists.txt  FragmentShader.glsl  Init.c  MatrixManipulation.c  README.md  TrigUtils.c  VertexShader.glsl  VoxelArray.c  Window.c
src/: Camera.c  Cube.c  GLUTFunctions.c  GLUtils.c  Main.c  Render.c
src/include/: Project.h
